redirected page to new website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="refresh" content="0; URL=https://ethanskim.vercel.app" />
         <title>About Soohwan Kim</title>
  
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,7 +20,7 @@
     <body>
         <div class="frame">
             <nav class="navigator">
-                <h3 class="site-name">About Ethan Soohwan Kim</h3>
+                <h3 class="site-name">About Soohwan Kim</h3>
                 <ul>
                     <li><a class="nav-menu" href="index.html">INFO</a></li>
                     <li><a class="nav-menu" href="work.html">WORK</a></li>
@@ -28,7 +29,7 @@
  
             <div class="dashboard">
                 <h1 class="intro-sentence">My name is <a class="sample">Soohwan Kim</a> <br>
-                <a class="highlight_1">Computer Science and Engineering</a> student graduating in <a class="highlight_2">2024</a></h1>
+                <a class="highlight_1">This is NOT Soohwan Kim's</a> Portfolio Website<a class="highlight_2">Anymore</a></h1>
                 <div id="icons">
                     <a href="https://www.github.com/EthanSKim" target="_blank"><img class="icon github" src="img/icons/github-icon.png" width="38" height="38" /></a>
                     <a href="https://www.linkedin.com/in/soohwan-kim-8724801bb/" target="_blank"><img class="icon linkedin" src="img/icons/linkedin-icon.png" width="38" height="38" /></a>
@@ -37,12 +38,12 @@
             </div>
  
             <div class="profile-section">
-                <img id="profile-picture" src="img/profilePic.jpeg">
+                <img id="profile-picture" src="img/seanProfile.jpeg">
                 <div class="introduction">
                     <h2>SKILLS</h2>
                         <div class="skills">
                             <div class="skill-box">
-                                <span class="title">HTML, CSS, Javascript, Typescript</span>
+                                <span class="title">AutoCAD</span>
                                 <div class="skill-bar">
                                     <span class="skill-per html">
                                         <span class="tooltip">90%</span>
@@ -50,7 +51,7 @@
                                 </div>
                             </div>
                             <div class="skill-box">
-                                <span class="title">React.JS | Next.JS</span>
+                                <span class="title">Grading</span>
                     
                                 <div class="skill-bar">
                                     <span class="skill-per reactjs">
@@ -59,7 +60,7 @@
                                 </div>
                             </div>
                             <div class="skill-box">
-                                <span class="title">React Native</span>
+                                <span class="title">Water resource</span>
                                 <div class="skill-bar">
                                     <span class="skill-per react-native">
                                         <span class="tooltip">70%</span>
@@ -67,7 +68,7 @@
                                 </div>
                             </div>
                             <div class="skill-box">
-                                <span class="title">Java</span>
+                                <span class="title">Surveying</span>
                                 <div class="skill-bar">
                                     <span class="skill-per java">
                                         <span class="tooltip">60%</span>
@@ -83,7 +84,7 @@
                                 </div>
                             </div>
                             <div class="skill-box">
-                                <span class="title">Node.JS</span>
+                                <span class="title">React Native</span>
                                 <div class="skill-bar">
                                     <span class="skill-per nodejs">
                                         <span class="tooltip">60%</span>
@@ -91,7 +92,7 @@
                                 </div>
                             </div>
                             <div class="skill-box">
-                                <span class="title">Python</span>
+                                <span class="title">MongoDB</span>
                                 <div class="skill-bar">
                                     <span class="skill-per python">
                                         <span class="tooltip">50%</span>
@@ -118,7 +119,7 @@
                     <h2>EDUCATION</h2>
                     <p id="education-title"><a class="university-link" href="https://www.tamu.edu/" target="_blank" title="Link to University website">Texas A&M University</a> 2020~2024</p>
                     <p class="education-description">
-                        Bachelor of Science in Computer Science and Engineering<br>
+                        Bachelor of Science in Civil Engineering<br>
                         GPA: 3.72
                     </p>
                     <p id="education-title">Relevant Courseworks</p>
@@ -132,20 +133,23 @@
                     </p>
                     <p id="education-title">Research</p>
                     <p class="education-description">
+                        Material research undergrad assistant - (<a href="https://engineering.tamu.edu/cse/profiles/huang-jeff.html" target="_blank" title="Research advisor">Hehe Cattos</a>)
+                    </p>
+                    <p class="education-description">
                         Solver: static analysis on Solana - (<a href="https://engineering.tamu.edu/cse/profiles/huang-jeff.html" target="_blank" title="Research advisor">Jeff Huang</a>)
                     </p>
                 </div>
             </div>
  
-            <h5 class="recent-menu">RECENT Work</h5>
+            <h5 class="recent-menu">RECENT Workout</h5>
             <div class="recent-works">
                 <!--Recent works-->
                 <div id="recent-img">
-                    <img src="img/projectImg/pillpal/pillpal-screen5.jpeg" alt="PillPal" width="700" style="border-radius: 30px;">
+                    <img src="img/recent-workout.jpeg" alt="PillPal" width="700" style="border-radius: 30px;">
                 </div>
                 <div id="recent-sentence">
-                    <h1>PillPal (TAMUHack 2023)</h1>
-                    <h4 style="color: rgba(0,0,0,0.6);">Check out my latest projects!</h4>
+                    <h1>TAMU Rec</h1>
+                    <h4 style="color: rgba(0,0,0,0.6);">Check out my latest 득근</h4>
                     <a href="work.html"><img id="arrowImg" src="img/arrow.png" alt="arrowToRight" width="100"></a>
                     
                 </div>
@@ -163,7 +167,9 @@
                     <p>Feel free to contact me!</p>
             </footer>
         </div>
-        <script src="script.js"></script>
+        <script src="script.js">
+            window.location.replace("http://www.w3schools.com");
+        </script>
     </body>
    
 </html>
